--- a/source/modal.html
+++ b/source/modal.html
@@ -46,34 +46,48 @@
             <option value="256">256</option>
             <option value="240">240</option>
           </select>
-          <input class="field" type="text" name="withdraw amount[]" placeholder="Withdraw amount">
-          <button class="button">Withdraw</button>
+          <div class="input-container">
+            <input class="field" type="text" name="withdraw amount[]" placeholder="Withdraw amount">
+            <button class="small-btn input-btn">Max</button>
+          </div>
+            <button class="button">Withdraw</button>
         </form>
       </li>
       <li class="tab-content__item js-tab-content" data-tab="3">
         <form action="#" method="post" class="rebalance-form form">
-          <p>From</p>
-          <select class="field select" size="1" name="exchange-rebalance-from[]">
+          <label for="from-exchange">From</label>
+          <select id="from-exchange" class="field select" size="1" name="exchange-rebalance-from[]">
             <option value="Choose exchange">Choose exchange</option>
             <option value="300">300</option>
             <option value="400">400</option>
           </select>
-          <p>To</p>
-          <select class="field select" size="1" name="exchange-rebalance-to[]">
+          <label for="to-exchange">To</label>
+          <select id="to-exchange" class="field select" size="1" name="exchange-rebalance-to[]">
             <option value="Choose exchange">Choose exchange</option>
             <option value="300">300</option>
             <option value="400">400</option>
           </select>
           <select class="field select" size="1" name="currency-rebalance[]">
-            <option value="Choose currency" disabled>Choose currency</option>
+            <option value="Choose currency">Choose currency</option>
             <option value="256">256</option>
             <option value="240">240</option>
           </select>
-          <input class="field" type="text" name="rebalance-text">
+          <input class="field field-text" type="text" name="rebalance-text">
+          <div class="balance-container">
+            <p class="balance-value">Balance: <span>0.04763864</span></p>
+            <div>
+              <button class="small-btn">10%</button>
+              <button class="small-btn">25%</button>
+              <button class="small-btn">50%</button>
+              <button class="small-btn">100%</button>
+              <button class="small-btn">Split</button>
+            </div>
+          </div>
         </form>
       </li>
     </ul>
   </div>
+
 </section>
 <div class="overlay"></div>
 <script>
