Кнопка закрытия формы готова

--- a/source/modal.html
+++ b/source/modal.html
@@ -87,7 +87,7 @@
       </li>
     </ul>
   </div>
-
+  <button class="form-close" type="button">Закрыть</button>
 </section>
 <div class="overlay"></div>
 <script>
